game don gian ban may bay

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 </style>
-<body onkeydown="control">
+<body onkeydown="control" background="sabo.jpg">
 <canvas id="Canvas" width="400" height="500" style="background: url(galaxy.jpg) ;border:1px solid #d3d3d3"></canvas>
 <script src="myplane.js"></script>
 <script src="enemyplane.js"></script>
