--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>Title</title>
 </head>
 <style>
+    body{
+        background-image: url('sabo.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        text-align: center;
+    }
 </style>
-<body onkeydown="control" background="sabo.jpg">
-<canvas id="Canvas" width="400" height="500" style="background: url(galaxy.jpg) ;border:1px solid #d3d3d3"></canvas>
+<body onkeydown="control">
+<canvas id="Canvas" width="400" height="500" style="background: url(galaxy.jpg) ;border:1px solid #d3d3d3; margin-top: 100px;"></canvas>
 <script src="myplane.js"></script>
 <script src="enemyplane.js"></script>
 <script src="bullet.js"></script>
